fix collection list view distorting error

--- a/components/common/folder/folder-list-item.module.css
+++ b/components/common/folder/folder-list-item.module.css
@@ -86,12 +86,14 @@
   margin: 0 10px;
   position: relative;
   max-height: 50px;
+  width: 50px;
+  height: 50px;
 }
 
 .thumbnail > img,
 .thumbnail > video {
-  width: 50px;
-  height: 50px;
+  width: inherit;
+  height: inherit;
   object-fit: contain;
 }
 
