--- a/components/main/search-overlay-assets/index.module.css
+++ b/components/main/search-overlay-assets/index.module.css
@@ -77,7 +77,7 @@
 }
 
 .share-landing-search{
-   width: 580px;
+
 }
 
 @media screen and (max-width: 690px) {
